Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextBooleanField.quorum
class Main
    text txt
    action Main
        txt = cast(text, true)
        if txt = "true"
            output "passed"
        end
    end
end