Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumObjBooleanField.quorum
class main
    Number num
    action Main
        num = cast(Number, true)
    end
end